Tests matchService